# AEIR-website

./: .gitignore  README.md  change_on_scroll.js  js_stuff.js  landing.css  welcome.css  welcome.html
bl/Bibliographie/02-Intéressants/: Notes sur A survey of semantic segmentation.docx
bl/Ecrits/: Charte Graphique Powerpoint.pptx  Présentation réunion CC 2018-05-25.pptx
bl/Ecrits/Rapport Stage/: modèle_couverture_PFE.docx
bl/Spécifications fonctionnelles/: Exemple référentiel d'exigences.xlsm  Spécifications fonctionnelles.docx  ~$écifications fonctionnelles.docx
blb/: README.md  ui_entrance.h  ui_mainwindow.h
blb/Bibliographie/02-Intéressants/: Notes sur le livre Machine Learning for Humans.docx
blb/Ecrits/: librairies imgproc liste.xlsx
blb/Proto/: .gitignore  CMakeLists.txt  Doxyfile  cppcheck.cmake  opencv.cmake  requirements.txt  test_notebook.ipynb
blb/Proto/ManageOptions/: CMakeLists.txt  ManageOptions.cpp  ManageOptions.h
blb/Proto/UI/: Entrance.cpp  Entrance.h  MainWindow.cpp  MainWindow.h
blb/Proto/UI/Qt/: entrance.ui  mainwindow.ui
blb/Proto/UnitTests/: AbstractTests.cpp  AbstractTests.h  CMakeLists.txt  LogConfig_Tests_Debug.xml  LogConfig_Tests_Error.xml  LogConfig_Tests_Fatal.xml  LogConfig_Tests_Info.xml  ManageOptionsTests.cpp  ManageOptionsTests.h  cppunit.cmake  mainTests.cpp  threadTests.cpp  threadTests.h
blb/Proto/ground_truth/: 424.xcf  425.xcf  427.xcf  428.xcf  429.xcf  430.xcf  431.xcf  metadata.ods
blb/Proto/threads/: CMakeLists.txt  CSleep.cpp  CSleep.h  CriticalSection.cpp  CriticalSection.h  Mutex.cpp  Mutex.h  MutexError.cpp  MutexError.h  Semaphore.cpp  Semaphore.h  SemaphoreError.cpp  SemaphoreError.h  Thread.cpp  Thread.h  Utils.cpp  Utils.h  pthreads.cmake
blb/Proto/transport/: Bus.cpp  Bus.h  CMakeLists.txt  Camera.cpp  Camera.h  Coach.cpp  Coach.h  Factory.h  Train.cpp  Train.h  Tramway.cpp  Tramway.h  Trolleybus.cpp  Trolleybus.h  Tube.cpp  Tube.h  Vehicle.cpp  Vehicle.h  camera_data.txt  coach_data.txt  main.cpp  vehicle_data.txt
blb/Proto/utils/: CMakeLists.txt  Logger.cpp  Logger.h  Tools.h
blb/Spécifications fonctionnelles/: Référentiel d'exigences Détection multi-objets.xlsm  ~$emple spécifications fonctionnelles.docx
blb/Spécifications fonctionnelles/Reviews/: Spécifications fonctionnelles-LFr-Reviews.docx
rawpython/: Results_faster_rcnn_inception.txt  Results_rfcn.txt  Results_ssd_inception.txt  Results_ssd_mobilenet.txt  requirements.txt  test.py  test_notebook.ipynb
rawpython/results/rcnn-inception/: Results_faster_rcnn_inception.txt
rawpython/results/rcnn-resnet/: Results_faster_rcnn_resnet.txt
welcome/: change_on_scroll.js  landing.css
